--- a/public/ldpanalyzer/index.html
+++ b/public/ldpanalyzer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tickshark LDP</title>
+    <title>PIPRHINO   LDP</title>
     <link href="images/wallace1.png" type="image/png" rel="icon" sizes="16x16">
     <link href="images/wallace1.png" type="image/png" rel="icon" sizes="32x32">
     <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 <body>
  
   <body class="EN">
-    <h1>Tickshark🦈📈</h1>
+    <h1>PipRhino📈</h1>
     <div class="menu">
       <span class="" title="R_100" data-full-name="Volatility 100">v_100</span>
       <span class="menu-active" title="R_10" data-full-name="Volatility 10">v_10</span>
