--- a/public/ai/index.html
+++ b/public/ai/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>📊 TickShark Analysis Tool</h1>
+            <h1>📊 OSAMHNR Tool</h1>
             <div class="controls">
                 <div class="control-group">
                     <label for="symbol-select">Symbol:</label>
