--- a/public/ldpanalyzer/index.html
+++ b/public/ldpanalyzer/index.html
@@ -12,7 +12,7 @@
 <body>
  
   <body class="EN">
-    <h1>PipRhino📈</h1>
+    <h1>OSAMHNR📈</h1>
     <div class="menu">
       <span class="" title="R_100" data-full-name="Volatility 100">v_100</span>
       <span class="menu-active" title="R_10" data-full-name="Volatility 10">v_10</span>
