--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="manifest" href="/manifest.json">
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/E0BCB7A8-2F8A-4CE2-BADC-BE2A67E38C01.jpeg" />
+        <link rel="icon" type="image/svg+xml" href="/osamlogo.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <!-- Primary Meta Tags -->
