--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             property="og:description"
             content="Build Deriv trading bots without coding. Automated strategies for MT5, DTrader & Deriv X. Backtest, optimize & deploy bots for synthetic indices, forex & commodities."
         />
-        <meta property="og:image" content="https://osamhnrtradinghub.com/preview-image.jpg" />
+        <meta property="og:image" content="https://osamhnrtradinghub.com/osamlogo.jpg" />
         
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -31,7 +31,7 @@
             property="twitter:description"
             content="Build Deriv trading bots without coding. Automated strategies for MT5, DTrader & Deriv X. Backtest, optimize & deploy bots for synthetic indices, forex & commodities."
         />
-        <meta property="twitter:image" content="https://osamtradinghub.com/preview-image.jpg" />
+        <meta property="twitter:image" content="https://osamtradinghub.com/osamlogo.jpg" />
 
         <!-- Additional SEO Meta -->
         <meta name="keywords" content="Deriv trading bot, Deriv automated trading, MT5 bot builder, DTrader automation, synthetic indices bot, forex trading bot, no-code trading bot, Deriv X strategies" />
