--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="manifest" href="/manifest.json">
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/osamlogo.jpg" />
+        <link rel="icon" type="image/svg+xml" href="/deriv-logo.jpeg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <!-- Primary Meta Tags -->
@@ -21,7 +21,7 @@
             property="og:description"
             content="Build Deriv trading bots without coding. Automated strategies for MT5, DTrader & Deriv X. Backtest, optimize & deploy bots for synthetic indices, forex & commodities."
         />
-        <meta property="og:image" content="https://tforexpro.com/osamlogo.jpg" />
+        <meta property="og:image" content="https://tforexpro.com/deriv-logo.jpeg" />
         
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
@@ -31,7 +31,7 @@
             property="twitter:description"
             content="Build Deriv trading bots without coding. Automated strategies for MT5, DTrader & Deriv X. Backtest, optimize & deploy bots for synthetic indices, forex & commodities."
         />
-        <meta property="twitter:image" content="https://tforexpro.com/osamlogo.jpg" />
+        <meta property="twitter:image" content="https://tforexpro.com/deriv-logo.jpeg" />
 
         <!-- Additional SEO Meta -->
         <meta name="keywords" content="Deriv trading bot, Deriv automated trading, MT5 bot builder, DTrader automation, synthetic indices bot, forex trading bot, no-code trading bot, Deriv X strategies" />
